fix(container): prevent container from stretching above 1024px using a better approach

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -13,8 +13,12 @@
   --breakpoint-sm: 640px;
   --breakpoint-md: 768px;
   --breakpoint-lg: 1024px;
-  --breakpoint-xl: 1024px;
-  --breakpoint-2xl: 1024px;
+  --breakpoint-xl: 1280px;
+  --breakpoint-2xl: 1536px;
+
+  --container-sm: 640px;
+  --container-md: 768px;
+  --container-lg: 1024px;
 
   /* Font families */
   --font-jetbrains: "JetBrains Mono", monospace;
@@ -59,6 +63,7 @@
   .container {
     margin-left: auto;
     margin-right: auto;
+    max-width: var(--container-lg) !important;
   }
   .main-btn {
     @apply relative inline-flex h-12 md:h-14 text-sm md:text-lg items-center justify-between gap-x-3 overflow-hidden rounded-md   bg-gradient-to-r dark:from-[#070e41] dark:to-[#263381] from-[#f6f7ff] to-[#f5f6ff] dark:border-[rgb(76_100_255)] border-2 border-[#f59e0b] bg-transparent px-4 md:px-6 font-medium dark:text-white text-black transition-all duration-100 dark:[box-shadow:5px_5px_#f59e0b] [box-shadow:5px_5px_#f59e0b] active:translate-x-[3px] active:translate-y-[3px] active:[box-shadow:0px_0px_rgb(38_51_129)] dark:active:[box-shadow:0px_0px_#f59e0b] cursor-none;
